[package]
name = "rfopt"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
publish = "false"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
kurobako_core = "0.1.8"
ordered-float = "2"
rand = "0.7"
randomforest = "0.1.5"
rustats = "*"
structopt = "0.3"
